# sd-research

./: .gitignore  BIOS_SECRETS.md  README.md  softgpuuv.md  vrr.md
.kiro/steering/: product.md  structure.md  tech.md
base/: MrcLpddr5.h  memory-clock.txt  mgcp.txt  разгониоптимизация.md  чат.txt
bios_analyzer_rs/: Cargo.toml  bios_analysis_report.json
bios_analyzer_rs/src/: advanced_analysis.rs  analysis.rs  deep_analysis.rs  dpm_analysis.rs  extreme_analysis.rs  hidden_menu.rs  ifr_parser.rs  main.rs  patterns.rs  structures.rs  ultra_deep.rs
research/: bios_analyzer.py  bios_deep_scan.py  biosmaker_check.sh  patcher.py  patcher_check.cpp
