[package]
name = "bios_analyzer"
version = "0.1.0"
edition = "2021"
description = "Steam Deck BIOS Deep Analyzer"

[dependencies]
memmap2 = "0.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
rayon = "1.10"
hex = "0.4"
byteorder = "1.5"

[profile.release]
opt-level = 3
lto = true
